# rust-sample-app

./: Cargo.toml  manifests.py  manifests.ts
.circleci/: config.yml
.github/workflows/: rust.yml
src/: lib.rs
src/routes/: app.rs  mod.rs  monitoring.rs
