[package]
name = "rust-sample-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.5" }
http = "0.2"
once_cell = "1"
opentelemetry = { version = "*", features = ["metrics", "rt-tokio", "trace"] }
opentelemetry-otlp = { version = "*" }
opentelemetry-prometheus = { version = "*", features = ["prometheus-encoding"] }
opentelemetry-semantic-conventions = "*"
serde = { version = "1", features = ["derive"] }
sled = "0.34"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tracing = { version = "0.1" }
tracing-bunyan-formatter = "0.3"
tracing-opentelemetry = "0.17"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
